# libjpeg-turbo

./: .gitignore  README  bmp.c  buildExample  example_dynamic_nacl.c  example_dynamic_nacl.cpp  example_dynamic_new_scaling.cpp  example_dynamic_non_nacl.c  example_dynamic_non_nacl.cpp  example_dynamic_safe_api.cpp  example_thin_dynamic_nacl.c  example_thin_dynamic_nacl_main.c  example_wasm.cpp  jcstest.c  jdinput.c  jdmarker.c  jmemmgr.c  jmorecfg.h  runPerfTest  scaling_benchmark.cpp  test_bytes.h  turbojpeg.c
ProcessSandbox/: Makefile  MyMalloc.cpp  MyMalloc.h  ProcessSandbox.cpp  ProcessSandbox.h  ProcessSandbox_otherside.cpp  ProcessSandbox_sharedmem.h  Sandbox.cpp  Sandbox.h  jpeglib_helpers.h  synch.cpp  synch.h  timing.cpp  timing.h
builds/: .gitignore  CMakeLists.txt  Makefile  wasm_test.sh
builds/native_wasm_test/configs_native/: config.h  jconfig.h  jconfigint.h
builds/native_wasm_test/configs_wasm/: config.h  jconfigint.h
simd/: jccolext-mmx.asm  jcgryext-mmx.asm  jcsample-mmx.asm  jcsample-sse2-64.asm  jcsample-sse2.asm  jdcolext-mmx.asm  jdcolext-sse2-64.asm  jdmrgext-mmx.asm  jdmrgext-sse2-64.asm  jdmrgext-sse2.asm  jdsample-mmx.asm  jdsample-sse2-64.asm  jdsample-sse2.asm  jidctfst-sse2-64.asm  jidctint-sse2-64.asm  jidctred-sse2-64.asm  jquantf-sse2-64.asm  jquanti-sse2-64.asm  jsimdcpu.asm
